# gini

./: README.md  gini.py  gini_hist.py  pyproject.toml
.github/workflows/: python-app.yml
tests/: test_main.py
