[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3"
]
dependencies = ["numpy"]
name = "gini"
readme = "README.md"
requires-python = ">=3.9"
version = "1.0"

[project.optional-dependencies]
dev = [
  "codespell",
  "coverage",
  "pre-commit",
  "pytest",
  "ruff>=0.5.3"
]

[tool.coverage.report]
fail_under = 80
show_missing = false

[tool.coverage.run]
source = ["."]

[tool.hatch.build]
only-include = ["gini.py"]

[tool.pytype]
inputs = ['gini.py']

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["C901", "I", "RUF022"]

[tool.uv]
package = true
